improve data rendering

--- a/src/app/missions/missions.component.html
+++ b/src/app/missions/missions.component.html
@@ -6,10 +6,12 @@
             (landingFilterChanged)="onLandingFilterChange($event)"
         ></app-filters>
     </section>
-    <section class="card-section" *ngIf="launchList; else loading">
+    <section class="card-section" *ngIf="launchList && !showSpinner; else loading">
         <div *ngFor="let item of launchList" class="card-container">
             <app-card [launchDetail]="item"></app-card>
         </div>
     </section>
-    <ng-template #loading>Loading.....</ng-template>
+    <ng-template #loading>
+        <div class="loader"></div>
+    </ng-template>
 </div>
