--- a/src/app/filters/filters.component.css
+++ b/src/app/filters/filters.component.css
@@ -2,6 +2,7 @@
     background-color: white;
     border-radius: 0.3em;
     padding: 0.5em;
+    margin: 5px;
 }
 .filter-criteria {
     text-align: center;
