--- a/src/app/missions/missions.component.html
+++ b/src/app/missions/missions.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <section>
+    <section class="tab-section">
         <app-filters
             (yearFilterChanged)="onYearFilterChange($event)"
             (launchFilterChanged)="onLaunchFilterChange($event)"
