--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
         <header><h1>{{ title }}</h1></header>
     </div>
     <router-outlet></router-outlet>
+    <footer>Developed by: {{ author }}</footer>
 </div>
