refactor and add testing dependency

--- a/src/app/chip/chip.component.html
+++ b/src/app/chip/chip.component.html
@@ -1,1 +1,1 @@
-<button class="chip" (click)="onClick(option)">{{ option.label }}</button>
+<button class="chip" (click)="onClick(option)">{{ option?.label }}</button>
