--- a/src/app/missions/missions.component.css
+++ b/src/app/missions/missions.component.css
@@ -14,6 +14,15 @@
     grid-template-columns: 1fr;
 }
 
+.no-records {
+    display: grid;
+    grid-template-columns: 1fr;
+    border: 16px solid white;
+    background-color: white;
+    margin: 6px;
+    text-align: center;
+}
+
 /* For tablets */
 @media (min-width: 700px) {
     .container {
@@ -53,7 +62,7 @@
     -webkit-animation: spin 2s linear infinite; /* Safari */
     animation: spin 2s linear infinite;
     margin: auto;
-  }
+}
   
   /* Safari */
   @-webkit-keyframes spin {
