--- a/src/app/missions/missions.component.html
+++ b/src/app/missions/missions.component.html
@@ -6,12 +6,19 @@
             (landingFilterChanged)="onLandingFilterChange($event)"
         ></app-filters>
     </section>
-    <section class="card-section" *ngIf="launchList && !showSpinner; else loading">
-        <div *ngFor="let item of launchList" class="card-container">
-            <app-card [launchDetail]="item"></app-card>
-        </div>
-    </section>
+    <div *ngIf="!showSpinner; else loading">
+        <section class="card-section" *ngIf="launchList && launchList.length > 0 ; else noRecord">
+            <div *ngFor="let item of launchList" class="card-container">
+                <app-card [launchDetail]="item"></app-card>
+            </div>
+        </section>
+    </div>
+    
     <ng-template #loading>
         <div class="loader"></div>
+    </ng-template>
+    
+    <ng-template #noRecord>
+        <div class="no-records">We are sorry!!. Try different filters.</div>
     </ng-template>
 </div>
