--- a/src/app/filters/filters.component.css
+++ b/src/app/filters/filters.component.css
@@ -1,5 +1,5 @@
 .filters {
-    background-color: white;
+    background-color: var(--sub-bg-color);
     border-radius: 0.3em;
     padding: 0.5em;
     margin: 5px;
