--- a/src/app/missions/missions.component.css
+++ b/src/app/missions/missions.component.css
@@ -1,6 +1,6 @@
 .container {
     display: grid;
-    background-color: #dee0df;
+    background-color: var(--main-bg-color);
 }
 
 .card-container {
@@ -17,18 +17,24 @@
 .no-records {
     display: grid;
     grid-template-columns: 1fr;
-    border: 16px solid white;
-    background-color: white;
+    border: 16px solid var(--sub-bg-color);
+    background-color: var(--sub-bg-color);
     margin: 6px;
     text-align: center;
     font-size: 20px;
+    border-radius: 0.3em;
+    color: orange;
+}
+
+.error {
+    color: red;
 }
 
 /* For tablets */
 @media (min-width: 700px) {
     .container {
         display: grid;
-        background-color: #dee0df;
+        background-color: var(--main-bg-color);
         grid-template-columns: 1fr 2fr;
         overflow: scroll;
     }
@@ -43,7 +49,7 @@
 @media (min-width: 1024px) {
     .container {
         display: grid;
-        background-color: #dee0df;
+        background-color: var(--main-bg-color);
         grid-template-columns: 1fr 3fr;
         overflow: scroll;
     }
