--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+:root {
+    --main-bg-color: #dee0df;
+    --sub-bg-color: white;
+}
 body {
-    background-color: #dee0df;
+    background-color: var(--main-bg-color);
 }
 
 @font-face {
